--- a/Documentazione/Ladder/Ladder.tex
+++ b/Documentazione/Ladder/Ladder.tex
@@ -5,6 +5,7 @@
 \date{5 maggio 2024}
 
 \usepackage{tabularx} %per le tabelle
+\usepackage[italian]{babel}  % Lingua
 \usepackage{booktabs} %per le linee
 \usepackage{graphicx} %per le immagini
 \usepackage{pdfpages} %include pdf
